# echo_journal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  AGENTS.md  BUGS.md  BUGS_FIXED.md  CONTRIBUTING.md  Dockerfile  FIXED_BUGS.md  MANIFEST.in  PROMPT_CLASSIFICATION.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TODO.md  activation_engine_utils.py  config.py  docker-compose.sample.yml  docker-compose.yml  env_utils.py  file_utils.py  immich_utils.py  jellyfin_utils.py  main.py  package-lock.json  package.json  prompt_utils.py  prompts.json  prompts.yaml  pyproject.toml  requirements.txt  settings.example.yaml  settings_utils.py  tailwind.config.js  tailwind_src.css  weather_utils.py  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-format-and-lint.yml  docker-image.yml  main.yml  pytest.yml  release-drafter.yml
config/: config.sample.json
docs/: API.md  audiobookshelf.md  configuration.md  deployment.md  frontmatter.md  security-protocols.md
scripts/: ci-local.sh  setup.sh
scripts/pre_commit/: check_sensitive_patterns.py  validate_structure.py
src/echo_journal/: activation_engine_utils.py  ai_prompt_utils.py  audiobookshelf_utils.py  config.py  env_utils.py  file_utils.py  immich_utils.py  jellyfin_utils.py  main.py  mindloom_utils.py  numbers_utils.py  prompt_utils.py  settings_utils.py  weather_utils.py  wordnik_utils.py
static/: echo_journal.js  style.css  tailwind.css
templates/: archive-entry.html  archives.html  base.html  echo_journal.html  settings.html  stats.html
tests/: conftest.py  test_activation_engine_utils.py  test_ai_prompt_utils.py  test_audiobookshelf_utils.py  test_config.py  test_endpoints.py  test_env_utils.py  test_file_utils.py  test_immich_utils.py  test_jellyfin_utils.py  test_main_utils.py  test_mindloom_utils.py  test_numbers_utils.py  test_prompt_utils.py  test_settings_utils.py  test_weather_utils.py  test_wordnik_utils.py
(+4 files in other folders)
