[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-journal"
version = "0.1.0"
description = "Minimalist FastAPI journaling app"
authors = [{ name = "Eoghann Mill Irving" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "starlette==0.47.2",
    "Jinja2==3.1.6",
    "aiofiles==24.1.0",
    "markdown==3.8.2",
    "bleach==6.2.0",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "types-aiofiles==24.1.0.20250801",
    "types-PyYAML==6.0.12.20250516",
    "types-bleach==6.2.0.20250514",
    "types-Markdown==3.8.0.20250809",
]

[project.scripts]
"echo-journal" = "echo_journal.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

